route-template/route.yml
apiVersion: v1
kind: Route
metadata:
  name: load
spec:
  host: onesaitplatform.example.com
  to:
    kind: Service
    name: loadbalancer
  tls:
    termination: edge
    key: |
LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBMm5pYVZMMEZDSVAwTE51d3hVMmYxV3ZnYlhTRVFZWGlDYzNUWnFRUyt3cUN6ckdqCnhaNWg2bEpWZHZrTnlhYmhDSDVpSU91dUZYQ2pySHpJbXRjclhrTldCV1V3UjVVbnVJRUlUWFB6akh4Vi9vTloKdy9pSStrejhGMWQycEZwM2Rvb05kTTZwZ0E4bThGREtVVlI2MWxCYk9nZVpreC9FaHdOVTFYWmszY2dFa2NWZQpwZ1dLcUVici94L0dteklYQ1BnaGNPZ0FZbEZ6VGRIL244ZTBEMVltaThsU1FiZ01TNnpZYUJ4VElyQUFBa1pRCjg3VTZMMm9MK1cwTEdrc2lSK0g5WXF4VVQxNHp6ZWlaQlZmNlBOUyt1SWNiQ3ZMSGxXcW04QW5DbnVPdndkK0sKZG5Ia1M1SjBPM01PSGV4NnIx [...]
    certificate: |
LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURYakNDQWthZ0F3SUJBZ0lKQU8xcEc5VzdMTFJSTUEwR0NTcUdTSWIzRFFFQkN3VUFNRjB4Q3pBSkJnTlYKQkFZVEFrVlRNUkF3RGdZRFZRUUlFd2ROYVc1ellXbDBNUTh3RFFZRFZRUUhFd1pOWVdSeWFXUXhEakFNQmdOVgpCQW9UQlVsdVpISmhNUnN3R1FZRFZRUURFeEpZTVNCU2IyOTBJRTFwYm5OaGFYUWdRMEV3SGhjTk1qQXdOekF4Ck1UVXlORE16V2hjTk1qVXhNakl5TVRVeU5ETXpXakJpTVFzd0NRWURWUVFHRXdKRlV6RVFNQTRHQTFVRUNCTUgKVFdsdWMyRnBkREVQTUEwR0ExVUVCeE1HVFdGa2NtbGtNUTR3REFZRFZRUUtFd1ZKYm1SeVlURWdNQjRHQTFVRQpBeE1YU1c1MFpYSnRaV1JwWVhSbElF [...]
